tests/error/output_errors/state_output_tag_too_long.err
Error: Tag too long (at $FILE:11:17)
   | 
 9 | def main() -> None:
10 |     q1 = qubit()
11 |     state_output(comptime("a" * (TAG_MAX_LEN + 1)), q1)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Output tag is too long

Note: Output tags are limited to 200 bytes

Guppy compilation failed due to 1 previous error
